--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
         {% load staticfiles %}
 		<title>Mohit Reddy</title>
         <link rel="icon" href="{% static 'images/title_image_48x48.jpg' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/slideshow.css' %}" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="{% static 'assets/js/ie/html5shiv.js' %}"></script><![endif]-->
@@ -21,7 +22,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><a href="/">Mohit Reddy</a></h1>
+				<h1><a href="/">Mohit Reddy,</a> <p1>~aka mohitreddy1996</p1></h1>
 				<a href="#nav">Menu</a>
 			</header>
 
@@ -57,6 +58,76 @@
                 </div>
 			</section>
 
+        <!-- Image slideshow
+        <section id="five">
+            <div class="diy-slideshow">
+
+                <figure class="show">
+                    <img src="http://themarklee.com/wp-content/uploads/2013/12/snowying.jpg" width="100%" /><figcaption>"Snowying" by <a href="http://www.flickr.com/photos/fiddleoak/8511209344/">fiddleoak</a>.</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="http://themarklee.com/wp-content/uploads/2013/12/starlight.jpg" width="100%" /><figcaption>"Starlight" by <a href="http://www.flickr.com/photos/chaoticmind75/10738494123/in/set-72157626146319517">ChaoticMind75</a>.</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="http://themarklee.com/wp-content/uploads/2013/12/snowstorm.jpg" width="100%" /><figcaption>"Snowstorm" by <a href="http://www.flickr.com/photos/tylerbeaulawrence/8539457508/">Beaulawrence</a>.</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="http://themarklee.com/wp-content/uploads/2013/12/misty-winter-afternoon.jpg" width="100%" /><figcaption>"Misty winter afternoon" by <a href="http://www.flickr.com/photos/22746515@N02/5277611659/">Bert Kaufmann</a>.</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="http://themarklee.com/wp-content/uploads/2013/12/good-morning.jpg" width="100%" /><figcaption>"Good Morning!" by <a href="http://www.flickr.com/photos/frank_wuestefeld/4306107546/">Frank Wuestefeld</a>.</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="http://themarklee.com/wp-content/uploads/2013/12/driving-home-for-christmas.jpg" width="100%" /><figcaption>"Driving home for Christmas" by <a href="http://www.flickr.com/photos/22746515@N02/5292186041/">Bert Kaufmann</a>.</figcaption>
+                </figure>
+
+                <span class="prev">&laquo;</span>
+                <span class="next">&raquo;</span>
+            </div>
+        </section>
+
+        -->
+        <!-- Profile Section -->
+
+        <section id="six" class="wrapper special">
+            <div class="inner">
+                <header class="major narrow">
+					<div class="heading_class">Profile</div>
+                    <!--<div class="customised_para">I am a Programmer.( Testing - Edit/Remove)</div>-->
+                </header>
+				<div class="customised_hr"></div>
+                <div class="row">
+                    <div class="col-1">
+                        <header class="major narrow">
+                            <div class="heading_class2"> About Me</div>
+							<div class="customised_hr"></div>
+                            <div class="customised_para">I am Sport programmer, developer, android developer, data engineer.
+                                &nbsp;( Testing - Edit/Remove)</div>
+                        </header>
+                    </div>
+                    <div class="col-2">
+                        <img class="circularImage" src="{% static 'images/profilePicture2.jpg' %}">
+                    </div>
+                    <div class="col-3">
+                        <header class="major narrow">
+                            <div class="heading_class2">Details</div>
+							<div class="customised_hr"></div>
+                            <h5>Name:</h5>
+                            <p>J Mohit Reddy</p>
+                            <h5><b>Age:</b></h5>
+                            <p>19 Years.</p>
+                            <h5><b>Place:</b></h5>
+                            <p>#D313, Mega Towers 2, National Institute of Technology, Karnataka, India. &nbsp;( Testing - Edit/Remove)</p>
+                        </header>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 		<!-- One -->
 			<section id="one" class="wrapper style1">
@@ -129,7 +200,7 @@
 				<div class="inner">
 					<header class="major narrow">
 						<h2>Get in touch</h2>
-						<p>Ipsum dolor tempus commodo adipiscing</p>
+						<p>Have a Message?</p>
 					</header>
 					<form action="#" method="POST">
 						<div class="container 75%">
@@ -179,6 +250,7 @@
 			</footer>
 
 		<!-- Scripts -->
+            <script src="{% static 'assets/js/slideshow.js' %}"></script>
 			<script src="{% static 'assets/js/jquery.min.js' %}"></script>
 			<script src="{% static 'assets/js/skel.min.js' %}"></script>
 			<script src="{% static 'assets/js/util.js' %}"></script>
