--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="{% static 'assets/js/ie/html5shiv.js' %}"></script><![endif]-->
 		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
+        <link rel="stylesheet" href="{% static 'assets/css/projectAnimation.css' %}"/>
 		<!--[if lte IE 8]><link rel="stylesheet" href="{% static 'assets/css/ie8.css' %}" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'assets/css/ie9.css' %}" /><![endif]-->
 	</head>
@@ -94,7 +95,7 @@
         -->
         <!-- Profile Section -->
 
-        <section id="six" class="wrapper special">
+        <section id="one" class="wrapper special">
             <div class="inner">
                 <header class="major narrow">
 					<div class="heading_class">Profile</div>
@@ -126,10 +127,226 @@
                         </header>
                     </div>
                 </div>
+
+                    <div class="heading_class3">
+                        At a glance
+                    </div>
+                <div class="customised_hr2"></div>
+                <div class="row">
+                    <div class="col-1">
+                        <div class="major narrow">
+                            <div class="heading_class2">
+                                Education
+                            </div>
+                            <div class="glanceContent">
+                                National Institue of Technology, Karnataka.
+                                bachelor of technology in Computer Science and Engineering.
+                                Junior Year.
+                                CGPA : 8.85/10
+                                <br>
+                            <b>to be edited.</b>
+                            </div>
+                            <br>
+                            <ul class="actions">
+                                <li>
+                                    <a href="#" class="button alt">More</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="major narrow">
+                            <div class="heading_class2">
+                                Experience
+                            </div>
+                            <div class="glanceContent">
+                                1) Software Engineering Intern at Bigclozet.
+                                Worked as a Data Engineering and Backend developer. Worked on Android application of the
+                                startup (Mention details).
+                                <br>
+                            <b>to be edited.</b>
+                            </div>
+                            <br>
+                            <ul class="actions">
+                                <li>
+                                    <a href="#" class="button alt">More</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="major narrow">
+                            <div class="heading_class2">
+                                From
+                            </div>
+                            <div class="glanceContent">
+                                I have stayed in many places.
+                                Currently i live in Air Force Station, Gwalior maharajapura, Madhya Pradesh, India.
+                                474025.
+                                <br>
+                            <b>to be edited.</b>
+                            </div>
+                            <br>
+                            <ul class="actions">
+                                <li>
+                                    <a href="#" class="button alt">More</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
+        <!--At a Glance section -->
+        <!--
+        <section id="eight" class="wrapper special">
+            <div class="inner">
+                <header class="major narrow">
+                    <div class="heading_class">
+                        At A Glance
+                    </div>
+                </header>
+                <div class="customised_hr"></div>
+                <div class="row">
+                    <div class="col-1">
+                        <div class="major narrow">
+                            <div class="heading_class2">
+                                Education
+                            </div>
+                            <div class="glanceContent">
+                                National Institue of Technology, Karnataka.
+                                bachelor of technology in Computer Science and Engineering.
+                                Junior Year.
+                                CGPA : 8.85/10
+                                <br>
+                            <b>to be edited.</b>
+                            </div>
+                            <br>
+                            <ul class="actions">
+                                <li>
+                                    <a href="#" class="button alt">More</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="major narrow">
+                            <div class="heading_class2">
+                                Experience
+                            </div>
+                            <div class="glanceContent">
+                                1) Software Engineering Intern at Bigclozet.
+                                Worked as a Data Engineering and Backend developer. Worked on Android application of the
+                                startup (Mention details).
+                                <br>
+                            <b>to be edited.</b>
+                            </div>
+                            <br>
+                            <ul class="actions">
+                                <li>
+                                    <a href="#" class="button alt">More</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="major narrow">
+                            <div class="heading_class2">
+                                From
+                            </div>
+                            <div class="glanceContent">
+                                I have stayed in many places.
+                                Currently i live in Air Force Station, Gwalior maharajapura, Madhya Pradesh, India.
+                                474025.
+                                <br>
+                            <b>to be edited.</b>
+                            </div>
+                            <br>
+                            <ul class="actions">
+                                <li>
+                                    <a href="#" class="button alt">More</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        -->
+        <!-- Projects Section -->
+        <!--
+        <section id="two" class="wrapper special">
+            <div class="inner">
+                <header class="major narrow">
+                    <div class="heading_class">Projects</div>
+                </header>
+                <div class="customised_hr"></div>
+                <ul class="photo-grid">
+                    <li>
+                            <figure class="show">
+                                <img src="{% static 'images/project1.jpg' %}" alt="Face Detection Bot">
+                                <figcaption>
+                                    <h4>Face Detection Bot</h4>
+                                    <p>OpenCV2, Raspberry PI 2, motors.
+                                    Face Detection Algorithms.
+                                    Python Coding.
+                                    Raspberry Pi 2 integration.</p>
+                                    <a href="/projects/">
+                                        <div class="project-box">
+                                            Learn More.
+                                        </div>
+                                    </a>
+                                </figcaption>
+                            </figure>
+                    </li>
+
+                    <li>
+                            <figure class="show">
+                                <img src="{% static 'images/project2.png' %}" alt="Chat Box">
+                                <figcaption>
+                                    <h4>Chat Box</h4>
+                                    <p>Java HTTP Server.
+                                    Basic HTML UI.
+                                    GET/POST Calls.</p>
+                                    <a href="/projects/">
+                                        <div class="project-box">
+                                            Learn More.
+                                        </div>
+                                    </a>
+                                </figcaption>
+                            </figure>
+                    </li>
+
+                    <li>
+                            <figure class="show">
+                                <img src="{% static 'images/project3.png' %}" alt="Subtitle Downloader">
+                                <figcaption>
+                                    <h4>Subtitle Downloader</h4>
+                                    <p>Python Scripts.
+                                    Command Line arguments.
+                                    subDB API.</p>
+                                    <a href="/projects/">
+                                        <div class="project-box">
+                                            Learn More.
+                                        </div>
+                                    </a>
+                                </figcaption>
+                            </figure>
+                    </li>
+                </ul>
+                <ul class="actions">
+                    <li>
+                        <a href="#" class="button alt">More</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        -->
+
 		<!-- One -->
+        <!--
 			<section id="one" class="wrapper style1">
 				<div class="inner">
 					<article class="feature left">
@@ -158,8 +375,9 @@
 					</article>
 				</div>
 			</section>
-
+           -->
 		<!-- Two -->
+        <!--
 			<section id="two" class="wrapper special">
 				<div class="inner">
 					<header class="major narrow">
@@ -181,26 +399,24 @@
 					</ul>
 				</div>
 			</section>
-
+        -->
 		<!-- Three -->
+
 			<section id="three" class="wrapper style3 special">
 				<div class="inner">
 					<header class="major narrow	">
-						<h2>Magna sed consequat tempus</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+						<div id="quote" class="quoteFont"></div>
 					</header>
-					<ul class="actions">
-						<li><a href="#" class="button big alt">Magna feugiat</a></li>
-					</ul>
 				</div>
 			</section>
 
 		<!-- Four -->
+
 			<section id="four" class="wrapper style2 special">
 				<div class="inner">
 					<header class="major narrow">
-						<h2>Get in touch</h2>
-						<p>Have a Message?</p>
+						<h2>Have a Message?</h2>
+						<p>Ping me at : </p>
 					</header>
 					<form action="#" method="POST">
 						<div class="container 75%">
@@ -254,6 +470,7 @@
 			<script src="{% static 'assets/js/jquery.min.js' %}"></script>
 			<script src="{% static 'assets/js/skel.min.js' %}"></script>
 			<script src="{% static 'assets/js/util.js' %}"></script>
+            <script src="{% static 'assets/js/quotes.js' %}"></script>
 			<!--[if lte IE 8]><script src="{% static 'assets/js/ie/respond.min.js' %}"></script><![endif]-->
 			<script src="{% static 'assets/js/main.js' %}"></script>
 
