--- a/templates/generic.html
+++ b/templates/generic.html
@@ -30,7 +30,7 @@
 					<li><a href="/projects/">Projects</a></li>
 					<li><a href="/experience/">Experience</a></li>
 					<li><a href="/academics/">Academics</a></li>
-					<li><a href="/resume/">Resume</a></li>
+					<li><a href="https://drive.google.com/file/d/0B8c0Bnt30GX0RC1BQm5YTURBVTQ/view?usp=sharing" target="_blank">Resume</a></li>
 					<li><a href="/contact_me/">Contact Me</a></li>
 				</ul>
 			</nav>
