--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 					<li><a href="/experience/">Experience</a></li>
 					<li><a href="/academics/">Academics</a></li>
 					<li><a href="https://drive.google.com/file/d/0B8c0Bnt30GX0RC1BQm5YTURBVTQ/view?usp=sharing" target="_blank">Resume</a></li>
-					<li><a href="/contact_me/">Contact Me</a></li>
+					<li><a href="/#contact_me">Contact Me</a></li>
 				</ul>
 			</nav>
 
@@ -411,7 +411,7 @@
 			</section>
 
 		<!-- Four -->
-
+        <div id="contact_me">
 			<section id="four" class="wrapper style2 special">
 				<div class="inner">
 					<header class="major narrow">
@@ -439,6 +439,7 @@
 					</form>
 				</div>
 			</section>
+        </div>
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -473,6 +474,7 @@
             <script src="{% static 'assets/js/quotes.js' %}"></script>
 			<!--[if lte IE 8]><script src="{% static 'assets/js/ie/respond.min.js' %}"></script><![endif]-->
 			<script src="{% static 'assets/js/main.js' %}"></script>
+            <script src="{% static 'assets/js/scroll.js' %}"></script>
 
 	</body>
 </html>
