Projects section started

--- a/static/assets/css/slideshow.css
+++ b/static/assets/css/slideshow.css
@@ -1,28 +1,17 @@
 .diy-slideshow{
+  margin-left: 0px;
   position: relative;
-  display: block;
   overflow: hidden;
 }
 figure{
+  margin-left: 0px;
   position: absolute;
   opacity: 0;
   transition: 1s opacity;
-}
-figcaption{
-  position: absolute;
-  font-family: sans-serif;
-  font-size: .8em;
-  bottom: .75em;
-  right: .35em;
-  padding: .25em;
-  color: #fff;
-  background: rgba(0,0,0, .25);
-  border-radius: 2px;
-}
-figcaption a{
-  color: #fff;
+
 }
 figure.show{
+  margin-left: 0px;
   opacity: 1;
   position: static;
   transition: 1s opacity;
@@ -34,8 +23,7 @@ figure.show{
   top: 50%;
   z-index: 1;
   font-size: 2em;
-  margin-top: -.75em;
-  opacity: .3;
+  opacity: 1.0;
   user-select: none;
 }
 .next:hover, .prev:hover{
@@ -43,18 +31,12 @@ figure.show{
   opacity: 1;
 }
 .next{
-  right: 0;
-  padding: 10px 5px 15px 10px;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-.prev{
-  left: 0;
-  padding: 10px 10px 15px 5px;
+  left: 430px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
-p{
-  margin: 10px 20px;
-  color: #fff;
+.prev{
+  left: 0px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
 }
