--- a/templates/projects.html
+++ b/templates/projects.html
@@ -63,18 +63,95 @@
                         </ul>
                     </div>
                 </article>
+
+
                 <article class="feature right">
-                    <span class="image"><img src="{% static 'images/pic02.jpg' %}" alt="" /></span>
+                    <span class="image">
+                        <div class="diy-slideshow2">
+                            <figure class="show">
+                                <img src="{% static 'images/project2_1.png' %}" height="350px" width="450px">
+                            </figure>
+                            <figure>
+                                <img src="{% static 'images/project2_2.png' %}" height="350px" width="450px">
+                            </figure>
+							<figure>
+                                <img src="{% static 'images/project2_4.jpg' %}" height="350px" width="450px">
+                            </figure>
+                            <span class="prev1">&laquo;</span>
+                            <span class="next1">&raquo;</span>
+                        </div>
+                    </span>
                     <div class="content">
-                        <h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-                        <p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+                        <h3>Ping Pong Game</h3>
+                        <p> Developed a 2 Player 2D PingPong game using OpenGL module in C++. Collisions with the walls and racquets at different angles implemented. Scores updated after a player wins a point.</p>
                         <ul class="actions">
                             <li>
-                                <a href="#" class="button alt">More</a>
+                                <a href="https://github.com/mohitreddy1996/PingPongGame" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
                 </article>
+
+
+				<article class="feature left">
+                    <span class="image">
+                        <div class="diy-slideshow3">
+                            <figure class="show">
+                                <img src="{% static 'images/project3_1.png' %}" height="350px" width="450px">
+                            </figure>
+                            <figure>
+                                <img src="{% static 'images/project3_2.png' %}" height="350px" width="450px">
+                            </figure>
+							<figure>
+                                <img src="{% static 'images/project3_3.png' %}" height="350px" width="450px">
+                            </figure>
+							<figure>
+                                <img src="{% static 'images/project1_3.png' %}" height="350px" width="450px">
+                            </figure>
+                            <span class="prev2">&laquo;</span>
+                            <span class="next2">&raquo;</span>
+                        </div>
+                    </span>
+                    <div class="content">
+                        <h3>Movie Subtitles Downloader</h3>
+                        <p>Developed an Application using Python and subDB API to download the synchronised subtitles for a movie.</p>
+                        <ul class="actions">
+                            <li>
+                                <a href="https://github.com/mohitreddy1996/Subtitle-downloader" class="button alt" target="_blank">View source code</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+
+
+				<article class="feature right">
+                    <span class="image">
+                        <div class="diy-slideshow4">
+                            <figure class="show">
+                                <img src="{% static 'images/project4_1.png' %}" height="350px" width="450px">
+                            </figure>
+                            <figure>
+                                <img src="{% static 'images/project4_2.jpg' %}" height="350px" width="450px">
+                            </figure>
+							<figure>
+                                <img src="{% static 'images/project4_3.jpg' %}" height="350px" width="450px">
+                            </figure>
+                            <span class="prev3">&laquo;</span>
+                            <span class="next3">&raquo;</span>
+                        </div>
+                    </span>
+                    <div class="content">
+                        <h3>Quick Chat Application</h3>
+                        <p>Developed an Application where multiple users can enter a common room to chat. New Rooms can be created. And recent messages in a room can fetched. Application written in JAVA using a simple HTTP server.</p>
+                        <ul class="actions">
+                            <li>
+                                <a href="https://github.com/mohitreddy1996/QuickChat" class="button alt" target="_blank">View source code</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+
+
             </div>
         </section>
 
