--- a/templates/projects.html
+++ b/templates/projects.html
@@ -28,7 +28,7 @@
 					<li><a href="/experience/">Experience</a></li>
 					<li><a href="/academics/">Academics</a></li>
 					<li><a href="https://drive.google.com/file/d/0B8c0Bnt30GX0RC1BQm5YTURBVTQ/view?usp=sharing" target="_blank">Resume</a></li>
-					<li><a href="/contact_me/">Contact Me</a></li>
+					<li><a href="/#contact_me">Contact Me</a></li>
 				</ul>
 			</nav>
 
@@ -143,6 +143,69 @@
                     <div class="content">
                         <h3>Quick Chat Application</h3>
                         <p>Developed an Application where multiple users can enter a common room to chat. New Rooms can be created. And recent messages in a room can fetched. Application written in JAVA using a simple HTTP server.</p>
+                        <ul class="actions">
+                            <li>
+                                <a href="https://github.com/mohitreddy1996/QuickChat" class="button alt" target="_blank">View source code</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+
+
+                <article class="feature left">
+                    <span class="image">
+                        <div class="diy-slideshow5">
+                            <figure class="show">
+                                <img src="{% static 'images/project5_1.png' %}" height="350px" width="450px">
+                            </figure>
+                            <figure>
+                                <img src="{% static 'images/project5_2.png' %}" height="350px" width="450px">
+                            </figure>
+							<figure>
+                                <img src="{% static 'images/project1_3.png' %}" height="350px" width="450px">
+                            </figure>
+                            <span class="prev4">&laquo;</span>
+                            <span class="next4">&raquo;</span>
+                        </div>
+                    </span>
+                    <div class="content">
+                        <h3>Python GUI Application</h3>
+                        <p>Developed an Application using Python and Tkinter module in python for GUI which calculates the bill for the selected items and quantity specified along with it.</p>
+                        <ul class="actions">
+                            <li>
+                                <a href="https://github.com/mohitreddy1996/QuickChat" class="button alt" target="_blank">View source code</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+
+
+
+                <article class="feature right">
+                    <span class="image">
+                        <div class="diy-slideshow6">
+                            <figure class="show">
+                                <img src="{% static 'images/project6_1.png' %}" height="350px" width="450px">
+                            </figure>
+                            <figure>
+                                <img src="{% static 'images/project6_2.png' %}" height="350px" width="450px">
+                            </figure>
+                            <figure>
+                                <img src="{% static 'images/project6_3.png' %}" height="350px" width="450px">
+                            </figure>
+                            <figure>
+                                <img src="{% static 'images/project6_4.png' %}" height="350px" width="450px">
+                            </figure>
+                            <figure>
+                                <img src="{% static 'images/project6_5.png' %}" height="350px" width="450px">
+                            </figure>
+                            <span class="prev5">&laquo;</span>
+                            <span class="next5">&raquo;</span>
+                        </div>
+                    </span>
+                    <div class="content">
+                        <h3>Library Management System</h3>
+                        <p>Developed an Application using Python and Tkinter module in python for GUI which calculates the bill for the selected items and quantity specified along with it.</p>
                         <ul class="actions">
                             <li>
                                 <a href="https://github.com/mohitreddy1996/QuickChat" class="button alt" target="_blank">View source code</a>
