--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
                             <br>
                             <ul class="actions">
                                 <li>
-                                    <a href="#" class="button alt">More</a>
+                                    <a href="/academics/" class="button alt">More</a>
                                 </li>
                             </ul>
                         </div>
