--- a/static/assets/css/academics.css
+++ b/static/assets/css/academics.css
@@ -1,17 +1,83 @@
-#acad_area h4{
-    position: absolute;
-    align: left;
+button.accordion {
+    background-color: #eee;
+    color: green;
+    cursor: pointer;
+    width: 100%;
+    height: 60px;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
 }
 
+button.sub_accordion {
+    background-color: #eee;
+    color: green;
+    cursor: pointer;
+    width: 75%;
+    align: left;
+    height: 40px;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
 
-#acad_area img{
-    float: right;
-    max-width: 300px;
-    max-height: 300px;
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+
+button.sub_accordion.active, button.sub_accordion:hover {
+    background-color: #ddd;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+div.panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+}
+
+/* The "show" class is added to the accordion panel when the user clicks on one of the buttons. This will show the panel content */
+div.panel.show {
     display: block;
 }
 
-#acad_area h5,
-#acad_area p{
-    display: inline;
+div.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: 0.6s ease-in-out;
+    opacity: 0;
+}
+
+div.panel.show {
+    opacity: 1;
+    max-height: 500px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
+}
+
+button.accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+button.accordion.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+button.sub_accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+button.sub_accordion.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
 }
