--- a/templates/academics.html
+++ b/templates/academics.html
@@ -13,6 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="{% static 'assets/js/ie/html5shiv.js' %}"></script><![endif]-->
 		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="{% static 'assets/css/academics.css' %}">
 		<!--[if lte IE 8]><link rel="stylesheet" href="{% static 'assets/css/ie8.css' %}" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'assets/css/ie9.css' %}" /><![endif]-->
@@ -46,62 +47,150 @@
 						<h2>Academics</h2>
 					</header>
 
+
                     <div class="acad_area">
-                        <header class="major narrow">
-                            <h3 style="align: left; top-margin: 10px;">Under Graduation</h3>
+                        <header>
+                            <h3>Under Graduation</h3>
                         </header>
                         <div class="inner" style="margin-left: 20px;">
                             <img src="{% static 'images/nitk.gif' %}" style="max-width: 200px; max-height: 200px; float: right; margin-right: 40px;">
-                                <h5 style="display: inline;">Institute: &nbsp;</h5>
-                                <p class="show_inline" style="display: inline;">National Institute of Technology, Karnataka, India.</p>
-                                <br>
-                                <h5 style="display: inline;">Branch/Field of Study: &nbsp;</h5>
-                                <p class="show_inline" style="display: inline;">Computer Science and Engineering.</p>
-                                <br>
-                                <h5 style="display: inline;">Year of Graduation: &nbsp;</h5>
-                                <p class="show_inline" style="display: inline;">2018 (Expected). Currently a Junior year student.</p>
 
-                                <br>
-                                <h5 style="display: inline;">Branch/Field of Study: &nbsp;</h5>
-                                <p class="show_inline" style="display: inline;">Computer Science and Engineering.</p>
+                            <h5 style="display: inline;">Institute: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">National Institute of Technology, Karnataka, India.</p>
+                            <br>
+                            <h5 style="display: inline;">Branch/Field of Study: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">Computer Science and Engineering.</p>
+                            <br>
+                            <h5 style="display: inline;">Year of Graduation: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">2018 (Expected). Currently a Junior year student.</p>
 
-                                <br>
-                                <h5 style="display: inline;">Cumulative GPA: &nbsp;</h5>
-                                <p class="show_inline" style="display: inline;">8.85/10.0 &nbsp;(As of August 2016)</p>
+                            <br>
+                            <h5 style="display: inline;">Branch/Field of Study: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">Computer Science and Engineering.</p>
 
-                                <br>
-                                <h5 style="display: inline;">Admission Test: &nbsp;</h5>
-                                <p class="show_inline" style="display: inline;">JEE Mains. Rank: 1893.</p>
+                            <br>
+                            <h5 style="display: inline;">Cumulative GPA: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">8.85/10.0 &nbsp;(As of August 2016).</p>
 
-                                <br>
-                                <br>
-                                <h5 style="display: inline;">List of Courses Completed </h5>
-                                <ul style="columns: 3;">
-                                    <li>Data Structures and Algorithms</li>
-                                    <li>Design and Analysis of Algorithms</li>
-                                    <li>Operating Systems</li>
-                                    <li>Theory of Computation</li>
-                                    <li>Discrete Mathematics</li>
-                                    <li>Concrete Mathematics</li>
-                                    <li>Software Engineering</li>
-                                    <li>Data Communication</li>
-                                    <li>Computer Organization and Architecture</li>
-                                    <li>Design of Digital Systems</li>
-                                    <li>Object Oriented Programming</li>
-                                </ul>
-                                <h5 style="display: inline;">List of On-going courses: &nbsp;</h5>
-                                <ul style="columns: 3;">
-                                    <li>Graph Theory</li>
-                                    <li>Information Security</li>
-                                    <li>Unix Programming and Networking</li>
-                                    <li>Database Management Systems</li>
-                                    <li>Computer Networks</li>
-                                    <li>Engineering Economics</li>
-                                </ul>
+                            <br>
+                            <h5 style="display: inline;">Admission Test: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">JEE Mains. Rank: 1893.</p>
+
+                            <br>
+                            <br>
+                            <h5 style="display: inline;">List of Courses Completed </h5>
+                            <ul style="columns: 3;">
+                                <li>Data Structures and Algorithms</li>
+                                <li>Design and Analysis of Algorithms</li>
+                                <li>Operating Systems</li>
+                                <li>Theory of Computation</li>
+                                <li>Discrete Mathematics</li>
+                                <li>Concrete Mathematics</li>
+                                <li>Software Engineering</li>
+                                <li>Data Communication</li>
+                                <li>Computer Organization and Architecture</li>
+                                <li>Design of Digital Systems</li>
+                                <li>Object Oriented Programming</li>
+                            </ul>
+                            <h5 style="display: inline;">List of On-going courses: &nbsp;</h5>
+                            <ul style="columns: 3;">
+                                <li>Graph Theory</li>
+                                <li>Information Security</li>
+                                <li>Unix Programming and Networking</li>
+                                <li>Database Management Systems</li>
+                                <li>Computer Networks</li>
+                                <li>Engineering Economics</li>
+                            </ul>
+
+
+                                <button class="accordion"><b>Know More &nbsp;..</b></button>
+                                <div class="panel">
+                                  <button class="accordion" style="width: 75%; height: 40px;"><b>Clubs & Societies</b></button>
+                                    <div class="panel">
+                                        <ul>
+                                            <li>Executive member at IEEE-NITK Student branch.</li>
+                                            <li>Executive member and Online programming contest organizer at Web-Club NITK.</li>
+                                            <li>Was a part of College BasketBall team.</li>
+                                        </ul>
+                                    </div>
+                                   <button class="accordion" style="width: 75%; height: 40px;"><b>Achievements</b></button>
+                                    <div class="panel">
+                                        <ul>
+
+                                        </ul>
+                                    </div>
+                                </div>
+
+
+                        </div>
+                    </div>
+
+                    <!-- High School -->
+                    <br>
+                    <br>
+                    <div class="acad_area">
+                        <header>
+                            <h3>High School</h3>
+                        </header>
+                        <div class="inner" style="margin-left: 20px;">
+                            <img src="{% static 'images/kv.jpg' %}" style="max-width: 180px; max-height: 180px; float: right; margin-right: 50px;">
+                            <h5 style="display: inline;">School: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">Kendriya Vidyalaya, Hebbal, Bangalore, India.</p>
+                            <br>
+
+                            <h5 style="display: inline;">Affiliation: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">Central Board of Secondary Education (CBSE).</p>
+                            <br>
+
+                            <h5 style="display: inline;">Stream: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">Science.</p>
+                            <br>
+
+                            <h5 style="display: inline;">Subjects: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">Physics, Chemistry, Mathematics, Computer Science, English.</p>
+                            <br>
+
+                            <h5 style="display: inline;">Grade 10 Score: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">10.0/10.0</p>
+                            <br>
+
+                            <h5 style="display: inline;">Grade 12 Score: &nbsp;</h5>
+                            <p class="show_inline" style="display: inline;">96.0%</p>
+                            <br>
+
+                            <button class="accordion"><b>Know More &nbsp;..</b></button>
+                                <div class="panel">
+                                  <button class="accordion" style="width: 75%; height: 40px;"><b>Achievements</b></button>
+                                    <div class="panel">
+                                        <ul>
+                                            Edits required.
+                                            <li>High school topper.</li>
+                                            <li>100/100 in Mathematics in grade 12.</li>
+                                            <li>Ranked 27(check) in India in RMO.</li>
+                                            <li>Attended INMO coaching camp at IIT Madras.</li>
+                                        </ul>
+                                    </div>
+
+                                   <button class="accordion" style="width: 75%; height: 40px;"><b>Extra Curricular Activities</b></button>
+                                    <div class="panel">
+                                        <ul>
+                                            Edits required.
+                                            <li>Part of basketball and cricket teams.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+
                         </div>
                     </div>
 				</div>
 			</section>
+
+
+
+
+
+
+
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -134,6 +223,7 @@
 			<script src="{% static 'assets/js/util.js' %}"></script>
 			<!--[if lte IE 8]><script src="{% static 'assets/js/ie/respond.min.js' %}"></script><![endif]-->
 			<script src="{% static 'assets/js/main.js' %}"></script>
+            <script src="{% static 'assets/js/accordion.js' %}"></script>
 
 	</body>
 </html>
