--- a/templates/projects.html
+++ b/templates/projects.html
@@ -35,7 +35,7 @@
         <section id="one" class="wrapper style1">
             <div class="inner">
                 <header class="major special">
-                    <div class="heading_class">Projects</div>
+                    <h2>Projects</h2>
                 </header>
                 <article class="feature left">
                     <span class="image">
@@ -179,11 +179,39 @@
                     </div>
                 </article>
 
-
-
                 <article class="feature right">
                     <span class="image">
                         <div class="diy-slideshow6">
+                            <figure class="show" style="margin-left: 100px; ">
+                                <img src="{% static 'images/project7_1.png' %}" height="300px" width="250px">
+                            </figure>
+                            <figure  style="margin-left: 100px; ">
+                                <img src="{% static 'images/project7_2.png' %}" height="300px" width="250px">
+                            </figure>
+                            <figure  style="margin-left: 100px; ">
+                                <img src="{% static 'images/project7_3.png' %}" height="300px" width="250px">
+                            </figure>
+                            <figure  style="margin-left: 100px; ">
+                                <img src="{% static 'images/project7_4.png' %}" height="300px" width="250px">
+                            </figure>
+                            <span class="prev5">&laquo;</span>
+                            <span class="next5">&raquo;</span>
+                        </div>
+                    </span>
+                    <div class="content">
+                        <h3>Just Park It.</h3>
+                        <p>Android Application in Ionic framework which gives directions to a parking place selected by the user. Parking places are hardcoded.</p>
+                        <ul class="actions">
+                            <li>
+                                <a href="https://github.com/sudo-getAC/JustParkIt" class="button alt" target="_blank">View source code</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+
+                <article class="feature left">
+                    <span class="image">
+                        <div class="diy-slideshow7">
                             <figure class="show">
                                 <img src="{% static 'images/project6_1.png' %}" height="350px" width="450px">
                             </figure>
@@ -199,16 +227,16 @@
                             <figure>
                                 <img src="{% static 'images/project6_5.png' %}" height="350px" width="450px">
                             </figure>
-                            <span class="prev5">&laquo;</span>
-                            <span class="next5">&raquo;</span>
+                            <span class="prev6">&laquo;</span>
+                            <span class="next6">&raquo;</span>
                         </div>
                     </span>
                     <div class="content">
                         <h3>Library Management System</h3>
-                        <p>Developed an Application using Python and Tkinter module in python for GUI which calculates the bill for the selected items and quantity specified along with it.</p>
+                        <p>C program with basic menu for depositing/issuing books, fine calculations, books/user details etc to implement Library Management system.</p>
                         <ul class="actions">
                             <li>
-                                <a href="https://github.com/mohitreddy1996/QuickChat" class="button alt" target="_blank">View source code</a>
+                                <a href="https://github.com/mohitreddy1996/Library-Management-System" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
